# AIDA1

./: .aida_knowledge.db  .aida_runtime.json  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  aida_autonomous.py  aida_master_controller.py  aida_memory.db  aida_voice.py  code.html  core_agi.py  docker-compose.yml  index.html  login.html  manage.py  metadata.json  package-lock.json  package.json  pyproject.toml  requirements.txt  server_manager.py  start_aida.ps1  test_urls.py  tsconfig.json  vite.config.ts
AIDA/: asgi.py  env.py  settings.py  urls.py  wsgi.py
aida_beta/: Modelfile  __init__.py  agent.py  cli.py  config.json  memory.py  provider.py  system_prompt.txt  tools.py
scripts/: dev-aida.mjs  install_aida_beta.ps1  install_aida_beta.sh  self_optimizer.py
server/: index.ts  research.ts
src/: App.tsx  ModelSelector.tsx  SplashScreen.tsx  index.css
src/components/: ModelSelector.tsx
src/pages/: AutonomousDashboard.tsx
templates/webapp/: build_pending.html
webapp/: admin.py  agents.py  aida_controller.py  apps.py  code_assistants.py  code_engine.py  code_fixer.py  code_generation_engine.py  codellama_provider.py  context_collector.py  context_injection.py  framework_assistants.py  infrastructure_assistants.py  knowledge_store.py  learning_assistants.py  model_auto_start.py  model_discovery.py  model_management_views.py  model_manager.py  model_views.py  models.py  orchestrator.py  react_provider.py  sandbox.py  security.py  tests.py  tool_hub.py  urls.py  views.py
webapp/agents/: __init__.py  base_agent.py  code_agent.py  (+2 more)
(+9 files in other folders)
